Fixed the gap above h2 in popup messages

--- a/web_based_prototype/css/stylesheet.css
+++ b/web_based_prototype/css/stylesheet.css
@@ -309,7 +309,6 @@ h1{
 
 h2{
 	text-align: center;
-	margin-top: 20%;
 	clear: left;
 	font-family: centuryGothicBold;
 	color: #856088;
